@@ -13,9 +13,8 @@ __author__ = "Angelscry"
 __url__ = "https://github.com/Angelscry/plugin.program.advanced.launcher"
 __git_url__ = "https://github.com/Angelscry/plugin.program.advanced.launcher"
 __credits__ = "Leo212 CinPoU, JustSomeUser, Zerqent, Zosky, Atsumori"
-__version__ = "2.5.7"
+__version__ = "2.5.8"
 
 if ( __name__ == "__main__" ):
     import resources.lib.launcher_plugin as plugin
     plugin.Main()
-
